# dlib_mmod_detect

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  appveyor.yml  dnn_mmod_find_thing_ex.cpp  dnn_mmod_sample_detector.h  dnn_mmod_train_find_thing_ex.cpp  sample_build.sh
cmake/Hunter/: config.cmake
